--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26",
-    "typescript": "~2.3.3"
+    "typescript": "3.1.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
